# Guild.ai-x-PyTorch-Lightning

./: LICENSE  README.md  config.yml  guild.yml  pyproject.toml
guildai_x_pytorch_lightning/: data.py  model.py  trainer.py
guildai_x_pytorch_lightning/models/: simple.py
